blog-app-apis/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springblogapp-service
spec:
  selector:
    app: springblogapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
