blog-app-apis/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springblogapp

spec:
  rules:
    - host: revanthdandu.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springblogapp-service
                port:
                  number: 80
